src/main/java/com/example/demo/common/error/ConflictException.java
package com.example.demo.common.error;

public class ConflictException extends RuntimeException{
    public ConflictException(String message) {
        super(message);
    }
}
